Test feature branches of called workflows

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,20 +47,21 @@ jobs:
     #   - e2e-tests-npm
     #   - tests-npm
     #   - static-checks-npm
-    uses: digicatapult/shared-workflows/.github/workflows/build-docker.yml@main
+    uses: digicatapult/shared-workflows/.github/workflows/build-docker.yml@feature/add_sbom_generators
     with:
       push_dockerhub: true
       push_ghcr: true
     permissions:
       packages: write
       contents: write
+      security-events: write
     secrets:
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
 
   release-github:
     needs: [build-docker]
-    uses: digicatapult/shared-workflows/.github/workflows/release-github.yml@main
+    uses: digicatapult/shared-workflows/.github/workflows/release-github.yml@feature/add_sbom_generators
     permissions:
       contents: write
       pull-requests: read
