Reset callee branch to main

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,7 +52,7 @@ jobs:
   #   secrets: inherit
 
   build-docker:
-    uses: digicatapult/shared-workflows/.github/workflows/build-docker.yml@feature/add_sbom_generators
+    uses: digicatapult/shared-workflows/.github/workflows/build-docker.yml@main
     permissions:
       packages: write
       contents: write
