Test DT project uploads

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,7 +62,9 @@ jobs:
 
   release-github:
     needs: [build-docker]
-    uses: digicatapult/shared-workflows/.github/workflows/release-github.yml@main
+    uses: digicatapult/shared-workflows/.github/workflows/release-github.yml@feature/add_dtrack_project_upload
+    with:
+      enable_dtrack_project: true
     permissions:
       contents: write
       pull-requests: read
