--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
     #   - e2e-tests-npm
     #   - tests-npm
     #   - static-checks-npm
-    uses: digicatapult/shared-workflows/.github/workflows/build-docker.yml@feature/add_sbom_generators
+    uses: digicatapult/shared-workflows/.github/workflows/build-docker.yml@main
     with:
       push_dockerhub: true
       push_ghcr: true
@@ -62,7 +62,9 @@ jobs:
 
   release-github:
     needs: [build-docker]
-    uses: digicatapult/shared-workflows/.github/workflows/release-github.yml@feature/add_sbom_generators
+    uses: digicatapult/shared-workflows/.github/workflows/release-github.yml@feature/add_dtrack_project_upload
+    with:
+      enable_dtrack_project: true
     permissions:
       contents: write
       pull-requests: read
