--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,15 @@ jobs:
   #     contents: write
   #   secrets: inherit
 
+  generate-npm-sbom:
+    uses: digicatapult/shared-workflows/.github/workflows/release-github.yml@feature/add_dtrack_project_upload
+    permissions:
+      contents: read
+    with:
+      enable_check_version: true
+      enable_dtrack_project: true
+      sbom_output_file: ${{ github.event.repository.name }}.dt.json
+
   build-docker:
     # needs:
     #   - e2e-tests-npm
@@ -61,10 +70,10 @@ jobs:
       DOCKERHUB_USERNAME: ${{ secrets.SQNC_DOCKERHUB_USERNAME }}
 
   release-github:
-    needs: [build-docker]
-    uses: digicatapult/shared-workflows/.github/workflows/release-github.yml@feature/add_dtrack_project_upload
-    with:
-      enable_dtrack_project: true
+    needs:
+      - build-docker
+      - generate-npm-sbom
+    uses: digicatapult/shared-workflows/.github/workflows/release-github.yml@main
     permissions:
       contents: write
       pull-requests: read
