--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,7 +72,7 @@ jobs:
   release-github:
     needs:
       - build-docker
-      - generate-npm-sbom
+      - generate-sbom-npm
     uses: digicatapult/shared-workflows/.github/workflows/release-github.yml@main
     permissions:
       contents: write
