Test replacement of Docker SBOMs (#10)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
     with:
       enable_check_version: true
       enable_dtrack_project: true
-      sbom_output_file: ${{ github.event.repository.name }}.dt.json
+      sbom_output_file: ${{ github.event.repository.name }}.cdx.json
     secrets:
       DTRACK_APIKEY: ${{ secrets.DTRACK_APIKEY }}
       DTRACK_HOSTNAME: ${{ secrets.DTRACK_HOSTNAME }}
@@ -58,7 +58,7 @@ jobs:
     #   - e2e-tests-npm
     #   - tests-npm
     #   - static-checks-npm
-    uses: digicatapult/shared-workflows/.github/workflows/build-docker.yml@main
+    uses: digicatapult/shared-workflows/.github/workflows/build-docker.yml@feature/add_dtrack_project_upload
     with:
       push_dockerhub: true
       push_ghcr: true
@@ -75,7 +75,9 @@ jobs:
     needs:
       - build-docker
       - generate-sbom-npm
-    uses: digicatapult/shared-workflows/.github/workflows/release-github.yml@main
+    uses: digicatapult/shared-workflows/.github/workflows/release-github.yml@feature/add_dtrack_project_upload
+    with:
+      get_sbom: true
     permissions:
       contents: write
       pull-requests: read
